templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "kafka-exporter"
  labels:
    app: "kafka-exporter"
spec:
  type: ClusterIP
  ports:
    - port: 9308
      targetPort: 9308
      protocol: TCP
      name: "kexporter"
  selector:
    app: "kafka-exporter"
