templates/kibanavs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtual-service
  #namespace: istio-system
spec:
  hosts:
  - "kibana.sandeepwagh.me"
  gateways:
  - istio-telemetry-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: esinfra-kibana.default.svc.cluster.local
        port:
          number: 5601
